Improve build.gradle and update README.md